--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
 
                 <div class="contact-detail">
                     <h4>Email</h4>
-                    <a href="mailto:info@peakperformancefitness.co">info@peakperformancefitness.co</a>
+                    <a href="/cdn-cgi/l/email-protection#ed84838b82ad9d888c869d889f8b829f808c838e888b849983889e9ec38e82"><span class="__cf_email__" data-cfemail="e881868e87a8988d8983988d9a8e879a8589868b8d8e819c868d9b9bc68b87">[email&#160;protected]</span></a>
                 </div>
 
                 <div class="contact-detail">
@@ -179,10 +179,4 @@
                     </ul>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Peak Performance Fitness. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
-</body>
-</html>
+            <div class="foote
